--- a/src/pages/project-requirements.css
+++ b/src/pages/project-requirements.css
@@ -18,6 +18,53 @@
   direction: ltr;
 }
 
+/* Fix list rendering for RTL */
+.rtl-editor .ql-editor ol,
+.rtl-editor .ql-editor ul {
+  padding-right: 1.5em;
+  padding-left: 0;
+}
+
+.rtl-editor .ql-editor li {
+  padding-right: 0.5em;
+  padding-left: 0;
+}
+
+/* Ensure list bullets/numbers appear on the right for RTL */
+.rtl-editor .ql-editor li::before {
+  margin-right: -1.5em;
+  margin-left: 0;
+  text-align: right;
+}
+
+/* Fix ordered list counter position for RTL */
+.rtl-editor .ql-editor ol > li {
+  counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
+  counter-increment: list-0;
+}
+
+.rtl-editor .ql-editor ol > li:before {
+  content: counter(list-0, decimal) '. ';
+}
+
+/* LTR support for non-RTL editor (English mode) */
+.ql-editor ol,
+.ql-editor ul {
+  padding-left: 1.5em;
+  padding-right: 0;
+}
+
+.ql-editor li {
+  padding-left: 0.5em;
+  padding-right: 0;
+}
+
+.ql-editor li::before {
+  margin-left: -1.5em;
+  margin-right: 0;
+  text-align: left;
+}
+
 /* Highlight flash animation for draft requirements */
 .highlight-flash {
   animation: calmHighlight 4s ease-in-out forwards;
